cmake_minimum_required(VERSION 3.4.1)
set(SDL2 C:/Users/Administrator/digitalknob/Development/3rdParty/SDL2-2.0.16)
set(SDL2_TTF C:/Users/Administrator/digitalknob/Development/3rdParty/SDL2_ttf-2.0.15)
set(FREETYPE C:/Users/Administrator/digitalknob/Development/3rdParty/freetype-2.5.5)

include_directories(${SDL2}/include)
include_directories(${SDL2_TTF})
add_library(main SHARED src/main/cpp/main.cpp)
add_library(hidapi SHARED ${SDL2}/src/hidapi/android/hid.cpp)
target_link_libraries(hidapi -llog)
target_link_libraries(main ${SDL2}/android32/Debug/libSDL2.a)
target_link_libraries(main hidapi)
target_link_libraries(main -landroid)
target_link_libraries(main -llog)
target_link_libraries(main GLESv1_CM)
target_link_libraries(main GLESv2)
target_link_libraries(main ${SDL2_TTF}/android32/lib/Debug/SDL_ttf.a)
target_link_libraries(main ${FREETYPE}/android32/Debug/libfreetype.a)
target_link_libraries(main OpenSLES)