cmake_minimum_required(VERSION 3.6)

set(DIGITALKNOB C:/Users/Administrator/digitalknob)
set(3RDPARTY ${DIGITALKNOB}/DK/3rdParty)
set(DKPLUGINS ${DIGITALKNOB}/DK/DKPlugins)

set(FREETYPE 	${3RDPARTY}/freetype-2.5.5)
set(SDL 		${3RDPARTY}/sdl-release-2.26.0)
set(SDL_TTF 	${3RDPARTY}/sdl_ttf-main)

include_directories(${SDL}/include)
include_directories(${SDL_TTF})
add_library(main SHARED main.cpp)
##add_library(hidapi SHARED ${SDL}/src/hidapi/android/hid.cpp)
##target_link_libraries(hidapi -llog)
target_link_libraries(main ${DKPLUGINS}/DKSdlText/android64/Debug/libDKSdlText.a)
target_link_libraries(main ${DKPLUGINS}/DKSdlWindow/android64/Debug/libDKSdlWindow.a)
target_link_libraries(main ${DKPLUGINS}/DKWindow/android64/Debug/libDKWindow.a)
target_link_libraries(main ${DKPLUGINS}/DKFile/android64/Debug/libDKFile.a)
target_link_libraries(main ${DKPLUGINS}/DKAssets/android64/Debug/libDKAssets.a)
target_link_libraries(main ${DKPLUGINS}/DKDuktape/android64/Debug/libDKDuktape.a)
target_link_libraries(main ${3RDPARTY}/duktape-master/android64/Debug/libduktape.a)
target_link_libraries(main ${DKPLUGINS}/DK/android64/Debug/libDK.a)
target_link_libraries(main ${3RDPARTY}/zlib-master/android64/Debug/libz.a)
target_link_libraries(main ${SDL}/android64/Debug/libSDL2.a)
target_link_libraries(main ${3RDPARTY}/libiconv-1.14/android64/Debug/libcharset.a)
target_link_libraries(main ${3RDPARTY}/libiconv-1.14/android64/Debug/libiconv.a)
#target_link_libraries(main ${3RDPARTY}/android-sdk/ndk/23.1.7779620/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/lib/aarch64-linux-android/libdl.a)
#target_link_libraries(main hidapi)
target_link_libraries(main -landroid)
target_link_libraries(main -llog)
target_link_libraries(main ${3RDPARTY}/android-sdk/ndk/23.1.7779620/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/lib/aarch64-linux-android/libm.a)
target_link_libraries(main GLESv1_CM)
target_link_libraries(main GLESv2)
target_link_libraries(main ${SDL_TTF}/android64/lib/Debug/SDL_ttf.a)
target_link_libraries(main ${FREETYPE}/android64/Debug/libfreetype.a)
target_link_libraries(main OpenSLES)
target_link_libraries(main -lm)