cmake_minimum_required(VERSION 3.6)

set(DIGITALKNOB C:/Users/Administrator/digitalknob)
set(DK3RDPARTY_DIR ${DIGITALKNOB}/Development/3rdParty)
set(DKPLUGINS ${DIGITALKNOB}/Development/DKPlugins)

set(FREETYPE 	${DK3RDPARTY_DIR}/freetype-2.5.5)
set(SDL 		${DK3RDPARTY_DIR}/sdl-release-2.26.0)
set(SDL_TTF 	${DK3RDPARTY_DIR}/sdl_ttf-main)

include_directories(${SDL}/include)
include_directories(${SDL_TTF})
add_library(main SHARED main.cpp)
##add_library(hidapi SHARED ${SDL}/src/hidapi/android/hid.cpp)
##target_link_libraries(hidapi -llog)
target_link_libraries(main ${DKPLUGINS_DIR}/DKSDLText/android_arm64/Debug/libDKSDLText.a)
target_link_libraries(main ${DKPLUGINS_DIR}/DKSDLWindow/android_arm64/Debug/libDKSDLWindow.a)
target_link_libraries(main ${DKPLUGINS_DIR}/DKWindow/android_arm64/Debug/libDKWindow.a)
target_link_libraries(main ${DKPLUGINS_DIR}/DKFile/android_arm64/Debug/libDKFile.a)
target_link_libraries(main ${DKPLUGINS_DIR}/DKAssets/android_arm64/Debug/libDKAssets.a)
target_link_libraries(main ${DKPLUGINS_DIR}/DKDuktape/android_arm64/Debug/libDKDuktape.a)
target_link_libraries(main ${DK3RDPARTY_DIR}/duktape-master/android_arm64/Debug/libduktape.a)
target_link_libraries(main ${DKPLUGINS_DIR}/DK/android_arm64/Debug/libDK.a)
target_link_libraries(main ${DK3RDPARTY_DIR}/zlib-master/android_arm64/Debug/libz.a)
target_link_libraries(main ${SDL}/android_arm64/Debug/libSDL2.a)
target_link_libraries(main ${DK3RDPARTY_DIR}/libiconv-1.14/android_arm64/Debug/libcharset.a)
target_link_libraries(main ${DK3RDPARTY_DIR}/libiconv-1.14/android_arm64/Debug/libiconv.a)
#target_link_libraries(main ${DK3RDPARTY_DIR}/android-sdk/ndk/23.1.7779620/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/lib/aarch64-linux-android/libdl.a)
#target_link_libraries(main hidapi)
target_link_libraries(main -landroid)
target_link_libraries(main -llog)
target_link_libraries(main ${DK3RDPARTY_DIR}/android-sdk/ndk/23.1.7779620/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/lib/aarch64-linux-android/libm.a)
target_link_libraries(main GLESv1_CM)
target_link_libraries(main GLESv2)
target_link_libraries(main ${SDL_TTF}/android_arm64/lib/Debug/SDL_ttf.a)
target_link_libraries(main ${FREETYPE}/android_arm64/Debug/libfreetype.a)
target_link_libraries(main OpenSLES)
target_link_libraries(main -lm)